[project]
name = "lineup"
version = "0.1.0"
description = "ARC provider plugin: durable background jobs + cron-style scheduling (TaskIQ + Redis)"
requires-python = ">=3.12"
dependencies = [
    "taskiq>=0.11",
    "taskiq-redis>=1.0",
    "typer>=0.12",
    "rich>=13.0",
]

[project.entry-points."arc.plugins"]
lineup = "lineup:register"

[project.entry-points."arc.plugins.cli"]
lineup = "lineup.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lineup"]
